--- a/index.html
+++ b/index.html
@@ -1,40 +1,137 @@
+<!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
-</head>
+    <title>SheCodes</title>
+    <style>
+      body {
+        background: #f6f2fe;
+      }
 
-<body>
-    <h1>SheCodes</h1>
+      h1 {
+        text-decoration: underline;
+        color: #885df1;
+        text-align: center;
+      }
+
+      h2 {
+        color: #272044;
+        font-weight: normal;
+        text-align: center;
+      }
+
+      button {
+        border: 1px solid #885df1;
+        border-radius: 30px;
+        box-shadow: 2px 5px 5px rgba(0, 0, 0, 0.2);
+        margin: 20px auto;
+        display: block;
+        color: #885df1;
+        font-size: 16px;
+        background: transparent;
+        padding: 15px 20px;
+        transition: all 200ms ease;
+      }
+
+      button:hover {
+        color: #fff;
+        background: #885df1;
+      }
+
+      ul {
+        list-style: none;
+        padding: 0;
+        text-align: center;
+      }
+
+      li {
+        display: inline;
+        margin: 0 15px;
+      }
+
+      a {
+        text-decoration: none;
+      }
+
+      a:hover {
+        text-decoration: underline;
+      }
+
+      .courses {
+        color: red;
+      }
+
+      .coders {
+        color: blue;
+      }
+
+      .stories {
+        color: green;
+      }
+
+      p {
+        text-align: center;
+      }
+
+      img {
+        display: block;
+        margin: 30px auto;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>
+      SheCodes
+    </h1>
+    <h2>
+      Coding Workshop
+    </h2>
+    <button>
+      Apply now
+    </button>
     <ul>
-        <li>
-            <a href="https://www.shecodes.io/students">
-                Coders
-            </a>
-        </li>
-        <li>
-            <a href="https://www.shecodes.io/courses">
-                Courses
-            </a>
-        </li>
-        <li>
-            <a href="https://www.shecodes.io/stories">
-                Stories
-            </a>
-        </li>
+      <li>
+        <a
+          href="https://www.shecodes.io/students"
+          target="_blank"
+          class="coders"
+        >
+          Coders
+        </a>
+      </li>
+      <li>
+        <a
+          href="https://www.shecodes.io/courses"
+          target="_blank"
+          class="courses"
+        >
+          Courses
+        </a>
+      </li>
+      <li>
+        <a
+          href="https://www.shecodes.io/stories"
+          target="_blank"
+          class="stories"
+        >
+          Stories
+        </a>
+      </li>
     </ul>
     <hr />
     <p>
-        <strong>
-            More info
-        </strong>
+      <strong>
+        More info
+      </strong>
     </p>
-    <imag 
-    src="https://media.istockphoto.com/id/1164885329/photo/getting-lost-in-the-code.jpg?s=612x612&w=0&k=20&c=wKWgD0x0tzhrqoFbIAQvulNTxVWZosdh5rq_lg-r284="
-    alt="Woman coding" 
-    width="300" />
-</body>
+ <img
+  src="https://media.istockphoto.com/id/1164885329/photo/getting-lost-in-the-code.jpg?s=612x612&w=0&k=20&c=wKWgD0x0tzhrqoFbIAQvulNTxVWZosdh5rq_lg-r284="alt="Woman coding" width="300" />
+        />
+    <div class="contact-details">
+      <span class="contact-platform">Email:</span>
+      hello@shecodes.io
+      <span class="contact-platform"> Instagram:</span> @shecodes.io
+    </div>
+  </body>
 </html>
